fix(searchbox): Overflow on mobile
- Prevented element from shrinking and then overflowing vertically

--- a/themes/hugo-docs/assets/elements/search-box.scss
+++ b/themes/hugo-docs/assets/elements/search-box.scss
@@ -23,6 +23,7 @@
     @include mobile-scroll();
     @include box-shadow();
     display: flex;
+    flex-shrink: 0;
     justify-content: flex-start;
     align-items: center;
     gap: $space-xs;
